--- a/CronService/src/main/resources/application.properties
+++ b/CronService/src/main/resources/application.properties
@@ -1,14 +1,19 @@
+#sweetMp3
 spring.datasource.url=jdbc:sqlserver://35.190.226.137:1433;databaseName=MusicWithLove
 spring.datasource.username=sa
 spring.datasource.password=MusicWithLove@@
 
 # Hibernate
 
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+hibernate.connection.characterEncoding=utf8
+hibernate.connection.useUnicode=true
+hibernate.connection.charSet=UTF-8
+  # The SQL dialect makes Hibernate generate better SQL for the chosen database
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.
 
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = create
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type=TRACE
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type=TRACE
