--- a/CronService/src/main/resources/application.properties
+++ b/CronService/src/main/resources/application.properties
@@ -2,10 +2,11 @@
 spring.datasource.url=jdbc:sqlserver://35.190.226.137:1433;databaseName=MusicWithLove
 spring.datasource.username=sa
 spring.datasource.password=MusicWithLove@@
+server.port=8888
 
 # Hibernate
 
-spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 hibernate.connection.characterEncoding=utf8
 hibernate.connection.useUnicode=true
 hibernate.connection.charSet=UTF-8
@@ -13,7 +14,9 @@ hibernate.connection.charSet=UTF-8
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = update
 
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type=TRACE
+
+logging.level.root=INFO,stdout,R,SYSLOG
