--- a/ManagementService/src/main/resources/application.properties
+++ b/ManagementService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto = create-drop
+spring.jpa.hibernate.ddl-auto = update
 spring.datasource.url=jdbc:sqlserver://35.190.226.137:1433;databaseName=MusicWithLove
 spring.datasource.username=sa
 spring.datasource.password=MusicWithLove@@
